--- a/sample8-5.html
+++ b/sample8-5.html
@@ -19,7 +19,7 @@
         });
         renderer.setSize(width, height);
         // 背景の色を設定
-        renderer.setClearColor(0xeeeeff);
+        renderer.setClearColor(0xeeeff);
 
         // シーンを作成
         const scene = new THREE.Scene();
@@ -92,6 +92,7 @@
           requestAnimationFrame(tick);
         }
       }
+      
     </script>
   </head>
 
