--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <ul>
             <li><a href="sample8-3.html">sample8-3.html（Spriteを使う）</a></li>
             <li><a href="sample8-4.html">sample8-4.html（森をつくる）</a></li>
-            <li><a href="2132099.html</a></li>
+            <li><a href="2132099.html">2132099.html</a></li>
         </ul>       
     </p>
 </body>
