--- a/2132099.html
+++ b/2132099.html
@@ -148,6 +148,11 @@
         //6面分のテクスチャー読み込み
         var materials = [
           new THREE.MeshLambertMaterial({map:THREE.ImageUtils.loadTexture("wood-texture_00019.jpg")}),
+          new THREE.MeshLambertMaterial({map:THREE.ImageUtils.loadTexture("wood-texture_00019.jpg")}),
+          new THREE.MeshLambertMaterial({map:THREE.ImageUtils.loadTexture("wood-texture_00019.jpg")}),
+          new THREE.MeshLambertMaterial({map:THREE.ImageUtils.loadTexture("wood-texture_00019.jpg")}),
+          new THREE.MeshLambertMaterial({map:THREE.ImageUtils.loadTexture("wood-texture_00019.jpg")}),
+          new THREE.MeshLambertMaterial({map:THREE.ImageUtils.loadTexture("wood-texture_00019.jpg")}),
         ];
  
         var material = new THREE.MeshFaceMaterial(materials); // マテリアルをセット
