--- a/2132099.html
+++ b/2132099.html
@@ -78,8 +78,8 @@
 
         // 机の板を作成
         var deskGeometry = new THREE.BoxGeometry(2, 2.5, 0.125);
-        var deskMaterial = new THREE.MeshPhongMaterial({ color: 0xffffff });
-        var desk = new THREE.Mesh(deskGeometry, deskMaterial);
+        //var deskMaterial = new THREE.MeshPhongMaterial({ color: 0xffffff });
+        //var desk = new THREE.Mesh(deskGeometry, deskMaterial);
         desk.castShadow = true; //影ができる
         desk.rotation.set( -Math.PI/2, 0, 0 );
         desk.position.set(0,1,0);
@@ -89,8 +89,8 @@
         //机の右後ろ脚
         var deskGeometry = new THREE.CylinderGeometry( 0.125, 0.125, 1, 32 );
         //上の底面の半径、下の底面の半径、高さ、何角柱か
-        var deskMaterial = new THREE.MeshPhongMaterial( {color: 0xffffff} );
-        var desk = new THREE.Mesh( deskGeometry, deskMaterial );
+        //var deskMaterial = new THREE.MeshPhongMaterial( {color: 0xffffff} );
+       //var desk = new THREE.Mesh( deskGeometry, deskMaterial );
         desk.position.set( -0.75, 0.5, -0.8 );
         scene.add( desk );
 
@@ -98,8 +98,8 @@
         //机の左後ろ脚
         var deskGeometry = new THREE.CylinderGeometry( 0.125, 0.125, 1, 32 );
         //上の底面の半径、下の底面の半径、高さ、何角柱か
-        var deskMaterial = new THREE.MeshPhongMaterial( {color: 0xffffff} );
-        var desk = new THREE.Mesh( deskGeometry, deskMaterial );
+        //var deskMaterial = new THREE.MeshPhongMaterial( {color: 0xffffff} );
+        //var desk = new THREE.Mesh( deskGeometry, deskMaterial );
         desk.position.set( -0.75, 0.5, 0.8 );
         scene.add( desk );
 
@@ -107,8 +107,8 @@
         //机の右前脚
         var deskGeometry = new THREE.CylinderGeometry( 0.125, 0.125, 1, 32 );
         //上の底面の半径、下の底面の半径、高さ、何角柱か
-        var deskMaterial = new THREE.MeshPhongMaterial( {color: 0xffffff} );
-        var desk = new THREE.Mesh( deskGeometry, deskMaterial );
+        //var deskMaterial = new THREE.MeshPhongMaterial( {color: 0xffffff} );
+        //var desk = new THREE.Mesh( deskGeometry, deskMaterial );
         desk.position.set( 0.75, 0.5, -0.8 );
         scene.add( desk );
 
@@ -116,16 +116,16 @@
         //机の左前脚
         var deskGeometry = new THREE.CylinderGeometry( 0.125, 0.125, 1, 32 );
         //上の底面の半径、下の底面の半径、高さ、何角柱か
-        var deskMaterial = new THREE.MeshPhongMaterial( {color: 0xffffff} );
-        var desk = new THREE.Mesh( deskGeometry, deskMaterial );
+        //var deskMaterial = new THREE.MeshPhongMaterial( {color: 0xffffff} );
+        //var desk = new THREE.Mesh( deskGeometry, deskMaterial );
         desk.position.set( 0.75, 0.5, 0.8 );
         scene.add( desk );
 
 
         //ソファー
         var sofaGeometry = new THREE.SphereGeometry( 0.25,32, 32 );
-        var sofaMaterial = new THREE.MeshPhongMaterial( {color: 0x808080} );
-        var sofa = new THREE.Mesh( sofaGeometry, sofaMaterial );
+       // var sofaMaterial = new THREE.MeshPhongMaterial( {color: 0x808080} );
+       // var sofa = new THREE.Mesh( sofaGeometry, sofaMaterial );
         sofa.scale.z = 4;
         sofa.scale.x = 3;
         sofa.scale.y = 1;
@@ -135,8 +135,8 @@
 
         //ソファーの背もたれ
         var sofaGeometry = new THREE.SphereGeometry( 0.25,32, 32 );
-        var sofaMaterial = new THREE.MeshPhongMaterial( {color: 0x808080} );
-        var sofa = new THREE.Mesh( sofaGeometry, sofaMaterial );
+        //var sofaMaterial = new THREE.MeshPhongMaterial( {color: 0x808080} );
+        //var sofa = new THREE.Mesh( sofaGeometry, sofaMaterial );
         sofa.scale.z = 5;
         sofa.scale.x = 1;
         sofa.scale.y = 5;
@@ -146,14 +146,14 @@
 
         //ソファーの肘置き
         var sofaGeometry = new THREE.BoxGeometry(1, 0.65, 0.5);
-        var sofaMaterial = new THREE.MeshPhongMaterial({ color: 0x8b4513});
-        var sofa = new THREE.Mesh(sofaGeometry, sofaMaterial);
+        //var sofaMaterial = new THREE.MeshPhongMaterial({ color: 0x8b4513});
+        //var sofa = new THREE.Mesh(sofaGeometry, sofaMaterial);
         sofa.position.set(-1.9, 0.1, 1.1);
         scene.add(sofa);
 
         var sofaGeometry = new THREE.BoxGeometry(1, 0.65, 0.5);
-        var sofaMaterial = new THREE.MeshPhongMaterial({ color: 0x8b4513});
-        var sofa = new THREE.Mesh(sofaGeometry, sofaMaterial);
+        //var sofaMaterial = new THREE.MeshPhongMaterial({ color: 0x8b4513});
+        //var sofa = new THREE.Mesh(sofaGeometry, sofaMaterial);
         sofa.position.set(-1.9, 0.1, -0.8);
         scene.add(sofa);
 
