--- a/2132099.html
+++ b/2132099.html
@@ -55,7 +55,7 @@
 
         // テクスチャー読み込み
       var textureLoader = new THREE.TextureLoader();
-      var texture = textureLoader.load("cit.png");
+      var texture = textureLoader.load("img/wood-texture_00019.jpg");
       var mat = new THREE.MeshPhongMaterial();
       mat.map = texture;
 
