--- a/report2  2132099.html
+++ b/report2  2132099.html
@@ -70,7 +70,7 @@
 
         // 机の板を作成
         var deskGeometry = new THREE.BoxGeometry(2, 2.5, 0.125);
-        //var deskMaterial = new THREE.MeshPhongMaterial({ color: 0xffffff });
+        var deskMaterial = new THREE.MeshPhongMaterial({ color: 0xffffff });
         //var desk = new THREE.Mesh(deskGeometry, deskMaterial);
         var desk = new THREE.Mesh(deskGeometry,mat);
         desk.castShadow = true; //影ができる
@@ -82,7 +82,7 @@
         //机の右後ろ脚
         var deskGeometry = new THREE.CylinderGeometry( 0.125, 0.125, 1, 32 );
         上の底面の半径、下の底面の半径、高さ、何角柱か
-        //var deskMaterial = new THREE.MeshPhongMaterial( {color: 0xffffff} );
+        var deskMaterial = new THREE.MeshPhongMaterial( {color: 0xffffff} );
         //var desk = new THREE.Mesh( deskGeometry, deskMaterial));
         var desk = new THREE.Mesh(deskGeometry,mat);
         desk.position.set( -0.75, 0.5, -0.8 );
@@ -92,7 +92,7 @@
         //机の左後ろ脚
         var deskGeometry = new THREE.CylinderGeometry( 0.125, 0.125, 1, 32 );
         //上の底面の半径、下の底面の半径、高さ、何角柱か
-        //var deskMaterial = new THREE.MeshPhongMaterial( {color: 0xffffff} );
+        var deskMaterial = new THREE.MeshPhongMaterial( {color: 0xffffff} );
         //var desk = new THREE.Mesh( deskGeometry,  deskMaterial) );
         var desk = new THREE.Mesh(deskGeometry,mat);
         desk.position.set( -0.75, 0.5, 0.8 );
@@ -102,7 +102,7 @@
         //机の右前脚
         var deskGeometry = new THREE.CylinderGeometry( 0.125, 0.125, 1, 32 );
         //上の底面の半径、下の底面の半径、高さ、何角柱か
-        //var deskMaterial = new THREE.MeshPhongMaterial( {color: 0xffffff} );
+        var deskMaterial = new THREE.MeshPhongMaterial( {color: 0xffffff} );
         //var desk = new THREE.Mesh( deskGeometry, deskMaterial );
         var desk = new THREE.Mesh(deskGeometry,mat);
         desk.position.set( 0.75, 0.5, -0.8 );
@@ -112,7 +112,7 @@
         //机の左前脚
         var deskGeometry = new THREE.CylinderGeometry( 0.125, 0.125, 1, 32 );
         //上の底面の半径、下の底面の半径、高さ、何角柱か
-        //var deskMaterial = new THREE.MeshPhongMaterial( {color: 0xffffff} );
+        var deskMaterial = new THREE.MeshPhongMaterial( {color: 0xffffff} );
         //var desk = new THREE.Mesh( deskGeometry, deskMaterial );
         desk.position.set( 0.75, 0.5, 0.8 );
         var desk = new THREE.Mesh(deskGeometry,mat);
