--- a/report2  2132099.html
+++ b/report2  2132099.html
@@ -64,7 +64,7 @@
 
           // テクスチャー読み込み
         var textureLoader = new THREE.TextureLoader();
-        var texture = textureLoader.load("img/wood-texture_00019.jpg");
+        var texture = textureLoader.load("img/sun.png");
         var mat = new THREE.MeshPhongMaterial();
         mat.map = texture;
 
