--- a/2132099.html
+++ b/2132099.html
@@ -12,7 +12,7 @@
 
       function init() {
         // サイズを指定
-        const width = 800
+        const width = 800;
         const height = 600;
 
 
