--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </ul>       
         <ul>
         課題２：
-            前回の課題が味気なかったので机を木目に変えた；
+            前回の課題が味気なかったので机を木目に変えた
              <li><a href="report2  2132099.html">report2  2132099.html</a></li>
         </ul>
     </p>
