--- a/report2  2132099.html
+++ b/report2  2132099.html
@@ -82,7 +82,7 @@
 
         //机の右後ろ脚
         var deskGeometry = new THREE.CylinderGeometry( 0.125, 0.125, 1, 32 );
-        上の底面の半径、下の底面の半径、高さ、何角柱か
+        //上の底面の半径、下の底面の半径、高さ、何角柱か
         var deskMaterial = new THREE.MeshPhongMaterial( {color: 0xffffff} );
         //var desk = new THREE.Mesh( deskGeometry, deskMaterial));
         var desk = new THREE.Mesh(deskGeometry,mat);
