Update report3  2132099.html

--- a/report3  2132099.html
+++ b/report3  2132099.html
@@ -55,7 +55,7 @@
         // マテリアルを作成
         const material = new THREE.PointsMaterial({
           // 一つ一つのサイズ
-          size += (30 * delta) / 1000.0;
+          size ;
           // 色
           color: 0xffffff,
         });
