Update report3  2132099.html

--- a/report3  2132099.html
+++ b/report3  2132099.html
@@ -38,7 +38,7 @@
         // 配置する範囲
         const SIZE = 3000;
         // 配置する個数
-        const LENGTH = 1000;
+        const LENGTH = 3000;
 
         for (let i = 0; i < LENGTH; i++) {
           const x = SIZE * (Math.random() - 0.25);
@@ -55,7 +55,7 @@
         // マテリアルを作成
         const material = new THREE.PointsMaterial({
           // 一つ一つのサイズ
-          size ;
+          size: 20,
           // 色
           color: 0xffffff,
         });
