--- a/report3  2132099.html
+++ b/report3  2132099.html
@@ -1,92 +1,44 @@
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <script type="importmap">
-      {
-        "imports": {
-          "three": "https://unpkg.com/three@0.152.2/build/three.module.js"
-        }
-      }
-    </script>
-    <script type="module">
-      import * as THREE from "three";
+// 1. canvas
+const canvas = document.querySelector("#main")
+const width = canvas.clientWidth;
+const height = canvas.clientHeight;
 
-      // サイズを指定
-      const width = 960;
-      const height = 540;
-      let rot = 0; // 角度
+// 2. scene
+const scene = new THREE.Scene();
 
-      // レンダラーを作成
-      const renderer = new THREE.WebGLRenderer({
-        canvas: document.querySelector("#myCanvas"),
-      });
-      renderer.setPixelRatio(window.devicePixelRatio);
-      renderer.setSize(width, height);
+// 3. mesh (box)
+const box = new THREE.Mesh(
+  new THREE.BoxGeometry(64, 64, 64),
+  new THREE.MeshNormalMaterial()
+);
+box.position.set(0, 0, 0);
+scene.add(box);
 
-      // シーンを作成
-      const scene = new THREE.Scene();
+// 4. camera
+const camera = new THREE.PerspectiveCamera(45, width / height, 1, 1000);
+camera.position.set(200, 100, 300);
+camera.lookAt(scene.position);
 
-      // カメラを作成
-      const camera = new THREE.PerspectiveCamera(45, width / height);
+// 4-2. camera controls
+var controls = new THREE.OrbitControls(camera, canvas);
+controls.enableDamping = true;
 
-      createStarField();
+// 5. renderer
+const renderer = new THREE.WebGLRenderer({ canvas, antialias: true });
+renderer.setSize(width, height);
+renderer.setClearColor(0xf0d0d0);
+renderer.setPixelRatio(window.devicePixelRatio);
 
-      function createStarField() {
-        // 頂点情報を格納する配列
-        const vertices = [];
+// 6. animate
+const animate = () => {
+  // next frame
+  requestAnimationFrame(animate);
 
-        // 配置する範囲
-        const SIZE = 3000;
-        // 配置する個数
-        const LENGTH = 3000;
+  // required if controls.enableDamping or controls.autoRotate are set to true
+  controls.update();
 
-        for (let i = 0; i < LENGTH; i++) {
-          const x = SIZE * (Math.random() - 0.25);
-          const y = SIZE * (Math.random() - 0.25);
-          const z = SIZE * (Math.random() - 0.25);
+  // render
+  renderer.render(scene, camera);
+};
 
-          vertices.push(x, y, z);
-        }
-
-        // 形状データを作成
-        const geometry = new THREE.BufferGeometry();
-        geometry.setAttribute("position", new THREE.Float32BufferAttribute(vertices, 3));
-
-        // マテリアルを作成
-        const material = new THREE.PointsMaterial({
-          // 一つ一つのサイズ
-          size: 20,
-          // 色
-          color: 0xffffff,
-        });
-
-        // 物体を作成
-        const mesh = new THREE.Points(geometry, material);
-        scene.add(mesh);
-      }
-
-      tick();
-
-      // 毎フレーム時に実行されるループイベントです
-      function tick() {
-        rot += 3;
-
-        // ラジアンに変換する
-        const radian = (rot * Math.PI) / 180;
-        // 角度に応じてカメラの位置を設定
-        camera.position.x = 1000 * Math.sin(radian);
-        camera.position.z = 1000 * Math.cos(radian);
-        // 原点方向を見つめる
-        camera.lookAt(new THREE.Vector3(0, 0, 0));
-
-        // レンダリング
-        renderer.render(scene, camera);
-
-        requestAnimationFrame(tick);
-      }
-    </script>
-  </head>
-  <body>
-    <canvas id="myCanvas"></canvas>
-  </body>
-</html>
+animate();
