Update report3  2132099.html

--- a/report3  2132099.html
+++ b/report3  2132099.html
@@ -57,7 +57,7 @@
           // 一つ一つのサイズ
           size: 20,
           // 色
-          color: 0xffffff,
+          color: 0xF0E68C,
         });
 
         // 物体を作成
@@ -69,7 +69,7 @@
 
       // 毎フレーム時に実行されるループイベントです
       function tick() {
-        rot += 3;
+        rot += 1;
 
         // ラジアンに変換する
         const radian = (rot * Math.PI) / 180;
