--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
         </ul>
 
         課題３：
-    　　　　前回の課題にアニメーションを追加することで部屋を見やすくした
+    　　　　作品タイトル　星空
+    　　　　pointクラスを活用して星空を作成した
     　　<ul>
           <li><a href="report3  2132099.html">report3  2132099.html</a></li>
       </ul>
