--- a/index.html
+++ b/index.html
@@ -5,20 +5,10 @@
     <title>WebGL(4)</title>
 </head>
 <body>
-    <h1>WebGL演習（４）</h1>
+    <h1>WebGL　レポート</h1>
     <h2>ビルボード</h2>
     <p>
-        背景色設定と板ポリ：
-        <ul>
-            <li><a href="sample8-1.html">sample8-1.html（単純な図形,背景色変更）</a></li>
-            <li><a href="sample8-2.html">sample8-2.html（板ポリにテクスチャ―付き）</a></li>
-        </ul>
-        ビルボード例：
-        <ul>
-            <li><a href="sample8-3.html">sample8-3.html（Spriteを使う）</a></li>
-            <li><a href="sample8-4.html">sample8-4.html（森をつくる）</a></li>
-        </ul>
-    
+        
         課題２：
             前回の課題が味気なかったので机を木目に変えた
          <ul>
@@ -26,8 +16,7 @@
         </ul>
 
         課題３：
-    　　　　作品タイトル　星空
-    　　　　pointクラスを活用して星空を作成した
+    　　　　作品タイトル星空　pointクラスを活用して星空を作成した
     　　<ul>
           <li><a href="report3  2132099.html">report3  2132099.html</a></li>
       </ul>
